# polaris_engine

./: .gitignore  pyproject.toml  readme.md
docs/: SCREENING_STRUCTURE.md
src/stock_filter/analytics/: __init__.py  pipeline.py  types.py
src/stock_filter/app/: interactive.py
src/stock_filter/cli/: main.py
src/stock_filter/core/: types.py  utils.py
src/stock_filter/datasource/: cache.py  loader.py  normalize.py  ohlcv_series_store.py  ohlcv_sync.py  pykrx_client.py
src/stock_filter/features/: __init__.py  defaults.py  registry.py
src/stock_filter/risk/: __init__.py  position_size.py  test_position_size.py
src/stock_filter/screening/: __init__.py  rule_defaults.py  screener.py
src/stock_filter/signals/: __init__.py  defaults.py  patterns.py  registry.py
src/stock_filter/storage/: __init__.py  series_reader.py
src/stock_filter/universe/: krx_index.py  provider.py  service.py  static_csv.py
src/stock_filter/universe/static/: kosdaq100.csv  kospi100.csv
tests/: test_cache.py  test_features_registry.py  test_interactive_index_etf.py  test_interactive_scoring.py  test_mfi_divergence_signal.py  test_normalize.py  test_position_size.py  test_position_size_explain.py  test_rsi_mfi_signal.py  test_screener_signal.py
tests/fixtures/: ohlcv_series_sample.csv  pykrx_ohlcv_raw.csv
